{
    "name": "InteractionInput",
    "maps": [
        {
            "name": "UnitsManagement",
            "id": "1d31edd1-ff85-4f72-9f6e-6f6cf9afd65e",
            "actions": [
                {
                    "name": "SetPosition",
                    "type": "Button",
                    "id": "202e5b78-ca5c-4429-85ca-31b7b85f93ef",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2eb4fc3d-7355-4b53-a9e7-4ff8b7348d66",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}